--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -106,6 +106,10 @@ android {
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
+    implementation 'com.google.android.flexbox:flexbox:3.0.0'
+
+    implementation project(':commonlib');
+    implementation project(':mobilertc');
 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}")
     debugImplementation("com.facebook.flipper:flipper-network-plugin:${FLIPPER_VERSION}") {
