--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -2,3 +2,5 @@ rootProject.name = 'YoungLabs'
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':app'
 includeBuild('../node_modules/@react-native/gradle-plugin')
+include ':commonlib'
+include ':mobilertc'
