--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "@react-native-async-storage/async-storage": "^1.19.0",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
+    "@reduxjs/toolkit": "^1.9.5",
     "react": "18.2.0",
     "react-native": "0.72.1",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-safe-area-context": "^4.6.4",
-    "react-native-screens": "^3.22.0"
+    "react-native-screens": "^3.22.0",
+    "react-redux": "^8.1.1",
+    "redux": "^4.2.1",
+    "redux-saga": "^1.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
