--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "^4.6.4",
     "react-native-screens": "^3.22.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.1.1",
     "redux": "^4.2.1",
     "redux-saga": "^1.2.3"
