--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -4,3 +4,5 @@ include ':app'
 includeBuild('../node_modules/@react-native/gradle-plugin')
 include ':commonlib'
 include ':mobilertc'
+include ':react-native-splash-screen'   
+project(':react-native-splash-screen').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-splash-screen/android')
