--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "YoungLabs",
-  "version": "0.0.1",
+  "name": "y",
+  "version": "y",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -22,6 +22,7 @@
     "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "^4.6.4",
     "react-native-screens": "^3.22.0",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.1.1",
     "redux": "^4.2.1",
@@ -38,7 +39,8 @@
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
-    "eslint": "^8.0.1",
+    "eslint": "^8.45.0",
+    "eslint-config-prettier": "^8.8.0",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.76.5",
     "prettier": "^2.4.1",
@@ -47,5 +49,10 @@
   },
   "engines": {
     "node": ">=16"
-  }
+  },
+  "description": "younglabs",
+  "main": "index.js",
+  "repository": "https://github.com/shobhit007/younglabsapp.git",
+  "author": "shobhit saini <shobhitsaini709@gmail.com>",
+  "license": "MIT"
 }
