--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "@reduxjs/toolkit": "^1.9.5",
+    "country-data": "^0.0.31",
+    "google-libphonenumber": "^3.2.32",
     "moti": "^0.25.3",
     "react": "18.2.0",
     "react-native": "0.72.1",
