--- a/ios/YoungLabs/Info.plist
+++ b/ios/YoungLabs/Info.plist
@@ -55,6 +55,8 @@
 	<array>
 		<string>Roboto Condensed.ttf</string>
 		<string>Big Shoulders Display SemiBold.ttf</string>
+		<string>Gelasio-Regular.ttf</string>
+		<string>Gelasio-SemiBold.ttf</string>
 	</array>
 </dict>
 </plist>
