signed keystore file

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -93,6 +93,15 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+
+        release {
+            if (project.hasProperty('yl_app')) {
+                storeFile file(YOUNGLABS_UPLOAD_STORE_FILE)
+                storePassword YOUNGLABS_UPLOAD_STORE_PASSWORD
+                keyAlias YOUNGLABS_UPLOAD_KEY_ALIAS
+                keyPassword YOUNGLABS_UPLOAD_KEY_PASSWORD
+            }
+        }
     }
     buildTypes {
         debug {
@@ -102,6 +111,7 @@ android {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
             signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
