--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,10 @@ local.properties
 *.keystore
 !debug.keystore
 
+# Ignore gradle.properties
+android/gradle.properties
+
+
 # node.js
 #
 node_modules/
