--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -53,7 +53,7 @@ react {
 /**
  * Set this to true to Run Proguard on Release builds to minify the Java bytecode.
  */
-def enableProguardInReleaseBuilds = false
+def enableProguardInReleaseBuilds = true
 
 /**
  * The preferred build flavor of JavaScriptCore (JSC)
@@ -95,7 +95,7 @@ android {
         }
 
         release {
-            if (project.hasProperty('yl_app')) {
+            if (project.hasProperty('YOUNGLABS_UPLOAD_STORE_FILE')) {
                 storeFile file(YOUNGLABS_UPLOAD_STORE_FILE)
                 storePassword YOUNGLABS_UPLOAD_STORE_PASSWORD
                 keyAlias YOUNGLABS_UPLOAD_KEY_ALIAS
@@ -111,7 +111,6 @@ android {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
             signingConfig signingConfigs.debug
-            signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
