added child name field on booking form

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -42,3 +42,7 @@ newArchEnabled=false
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+YOUNGLABS_UPLOAD_STORE_FILE=yl_app.keystore
+YOUNGLABS_UPLOAD_KEY_ALIAS=younglabs_app
+YOUNGLABS_UPLOAD_STORE_PASSWORD=Yipl21021710!!@@
+YOUNGLABS_UPLOAD_KEY_PASSWORD=Yipl21021710!!@@
