--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -128,6 +128,8 @@ dependencies {
     implementation("com.facebook.react:react-android")
     implementation 'com.google.android.flexbox:flexbox:3.0.0'
     implementation project(':react-native-splash-screen')
+    implementation 'com.google.android.play:app-update:2.0.1'
+    implementation 'com.google.android.material:material:1.3.0-alpha03'
 
     implementation project(':mobilertc')
     implementation project(':commonlib')
