--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
 
     <application
       android:name=".MainApplication"
@@ -30,5 +31,6 @@
             <data android:scheme="https" android:host="www.younglabs.in"/>
         </intent-filter>
       </activity>
+        <service android:name=".NotificationTimerService"></service>
     </application>
 </manifest>
