--- a/android/build.gradle
+++ b/android/build.gradle
@@ -14,6 +14,14 @@ buildscript {
         google()
         mavenCentral()
     }
+    allprojects {
+        repositories {
+            google()
+            maven {
+                url "https://pkgs.dev.azure.com/MicrosoftDeviceSDK/DuoSDK-Public/_packaging/Duo-SDK-Feed/maven/v1"
+            }
+        }
+    }
     dependencies {
         classpath("com.android.tools.build:gradle")
         classpath("com.facebook.react:react-native-gradle-plugin")
