--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-share": "^9.2.3",
     "react-native-splash-screen": "^3.3.0",
     "react-native-vector-icons": "^10.0.0",
+    "react-native-video": "^5.2.1",
     "react-redux": "^8.1.1",
     "redux-saga": "^1.2.3"
   },
