--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: "com.android.application"
 apply plugin: "com.facebook.react"
+apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 /**
  * This is the configuration block to customize your React Native Android app.
@@ -78,8 +80,8 @@ android {
         applicationId "com.younglabs"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 2
-        versionName "1.01"
+        versionCode 23010100
+        versionName "1.1.0"
 
         Properties properties = new Properties();
         properties.load(project.rootProject.file("local.properties").newDataInputStream())
@@ -132,8 +134,6 @@ dependencies {
     implementation 'com.google.android.play:app-update:2.0.1'
     implementation 'com.google.android.material:material:1.3.0-alpha03'
 
-    implementation project(':mobilertc')
-    implementation project(':commonlib')
 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}")
     debugImplementation("com.facebook.flipper:flipper-network-plugin:${FLIPPER_VERSION}") {
