--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@notifee/react-native": "^7.8.0",
     "@react-native-async-storage/async-storage": "^1.19.0",
     "@react-native-community/netinfo": "^9.4.1",
+    "@react-native-firebase/app": "^18.3.2",
+    "@react-native-firebase/auth": "^18.3.2",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
