--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -70,6 +70,7 @@ def enableProguardInReleaseBuilds = false
  */
 def jscFlavor = 'org.webkit:android-jsc:+'
 
+apply from: "../../node_modules/@sentry/react-native/sentry.gradle"
 android {
     ndkVersion rootProject.ext.ndkVersion
 
@@ -80,8 +81,8 @@ android {
         applicationId "com.younglabs"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 23010100
-        versionName "1.1.0"
+        versionCode 23010101
+        versionName "1.1.1"
 
         Properties properties = new Properties();
         properties.load(project.rootProject.file("local.properties").newDataInputStream())
