--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "@reduxjs/toolkit": "^1.9.5",
+    "@sentry/react-native": "^5.9.1",
     "google-libphonenumber": "^3.2.32",
     "moti": "^0.25.3",
     "react": "18.2.0",
