--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
-    "start": "react-native start",
+    "start": "env-cmd -f .env.production react-native start",
     "test": "jest"
   },
   "dependencies": {
@@ -21,12 +21,14 @@
     "@react-navigation/stack": "^6.3.17",
     "@reduxjs/toolkit": "^1.9.5",
     "@sentry/react-native": "^5.9.1",
+    "env-cmd": "^10.1.0",
     "google-libphonenumber": "^3.2.32",
     "moti": "^0.25.3",
     "react": "18.2.0",
     "react-native": "0.72.1",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-localization": "^2.3.2",
     "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "^4.6.4",
     "react-native-screens": "^3.22.0",
