--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
-BASE_URL=http://192.168.1.13:8080
+BASE_URL=http://192.168.1.7:8080
 BOOKING_URL=/admin/demobook/bookingstatus
 BOOKING_DETAILS=/admin/bookings/getBooking
 MARK_ATTENDENCE_URL=/admin/demobook/markattendance
@@ -12,3 +12,4 @@ SEND_CLASS_LINK_URL=/admin/demobook/sendLinkOnEmail
 ACS_TOKEN_URL=/admin/msteams/getacstoken
 GEO_LOCATION_API=https://api.ipgeolocation.io/ipgeo?apiKey=5e27b5eb92c34497bbf62b8bee762cbb
 SENTRY_DSN=https://56bbe3a86c145da90c735295c1d1770f@o4504636802400256.ingest.sentry.io/4505837669908480
+DEVICE_ID_URL=/app/devices/savedevice
