--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
-    "start": "env-cmd -f .env.production react-native start",
+    "start": "env-cmd -f .env.prod react-native start",
     "test": "jest"
   },
   "dependencies": {
