--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,6 +4,9 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    
 
     <application
       android:name=".MainApplication"
@@ -25,6 +28,7 @@
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
+            <action android:name="android.intent.action.DOWNLOAD_COMPLETE"/>
         </intent-filter>
         <intent-filter android:autoVerify="true">
             <action android:name="android.intent.action.VIEW"/>
@@ -39,4 +43,11 @@
             android:resource="@drawable/ic_small_icon"
             />
     </application>
+    <queries>
++   <intent>
++     <action android:name="android.intent.action.VIEW" />
++     <!-- If you don't know the MIME type in advance, set "mimeType" to "*/*". -->
++     <data android:mimeType="*/*" />
++   </intent>
++ </queries>
 </manifest>
