--- a/package.json
+++ b/package.json
@@ -16,20 +16,26 @@
     "@react-native-firebase/app": "^18.3.2",
     "@react-native-firebase/auth": "^18.3.2",
     "@react-native-firebase/messaging": "^18.5.0",
+    "@react-native-firebase/storage": "^18.6.1",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "@reduxjs/toolkit": "^1.9.5",
     "@sentry/react-native": "^5.9.1",
-    "env-cmd": "^10.1.0",
     "google-libphonenumber": "^3.2.32",
-    "moti": "^0.25.3",
     "react": "18.2.0",
     "react-native": "0.72.1",
+    "react-native-blob-util": "^0.19.2",
+    "react-native-compressor": "^1.8.15",
+    "react-native-document-picker": "^9.0.1",
+    "react-native-file-viewer": "^2.1.5",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-localization": "^2.3.2",
+    "react-native-pdf": "^6.7.1",
+    "react-native-pdf-light": "^2.4.0",
     "react-native-permissions": "^3.9.2",
     "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "^4.6.4",
@@ -39,6 +45,7 @@
     "react-native-splash-screen": "^3.3.0",
     "react-native-vector-icons": "^10.0.0",
     "react-native-video": "^5.2.1",
+    "react-native-video-controls": "^2.8.1",
     "react-redux": "^8.1.1",
     "redux-saga": "^1.2.3"
   },
