--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@sentry/react-native": "^5.9.1",
     "google-libphonenumber": "^3.2.32",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.72.1",
     "react-native-blob-util": "^0.19.2",
@@ -37,6 +38,7 @@
     "react-native-pdf": "^6.7.1",
     "react-native-pdf-light": "^2.4.0",
     "react-native-permissions": "^3.9.2",
+    "react-native-razorpay": "^2.3.0",
     "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "^4.6.4",
     "react-native-screens": "^3.22.0",
