--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -140,6 +140,7 @@ dependencies {
     implementation project(':react-native-splash-screen')
     implementation 'com.google.android.play:app-update:2.0.1'
     implementation 'com.google.android.material:material:1.3.0-alpha03'
+    implementation 'com.google.android.play:integrity:1.3.0'
 
 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}")
