--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "react": "18.2.0",
     "react-native": "0.72.1",
     "react-native-blob-util": "^0.19.2",
+    "react-native-collapsible": "^1.6.1",
     "react-native-compressor": "^1.8.15",
     "react-native-document-picker": "^9.0.1",
+    "react-native-element-dropdown": "^2.10.0",
     "react-native-file-viewer": "^2.1.5",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.12.0",
