--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@notifee/react-native": "^7.8.0",
     "@react-native-async-storage/async-storage": "^1.19.0",
+    "@react-native-clipboard/clipboard": "^1.12.1",
     "@react-native-community/netinfo": "^9.4.1",
     "@react-native-firebase/app": "^18.3.2",
     "@react-native-firebase/auth": "^18.3.2",
