--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "@notifee/react-native": "^7.8.0",
-    "@react-native-async-storage/async-storage": "^1.19.0",
     "@react-native-clipboard/clipboard": "^1.12.1",
     "@react-native-community/netinfo": "^9.4.1",
     "@react-native-firebase/app": "^18.3.2",
@@ -30,17 +29,15 @@
     "react-native": "0.72.1",
     "react-native-blob-util": "^0.19.2",
     "react-native-collapsible": "^1.6.1",
-    "react-native-compressor": "^1.8.15",
     "react-native-document-picker": "^9.0.1",
     "react-native-element-dropdown": "^2.10.0",
     "react-native-file-viewer": "^2.1.5",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-image-picker": "^7.1.0",
-    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-localization": "^2.3.2",
+    "react-native-mmkv": "^2.11.0",
     "react-native-pdf": "^6.7.1",
-    "react-native-pdf-light": "^2.4.0",
     "react-native-permissions": "^3.9.2",
     "react-native-razorpay": "^2.3.0",
     "react-native-reanimated": "^3.3.0",
@@ -51,7 +48,6 @@
     "react-native-splash-screen": "^3.3.0",
     "react-native-vector-icons": "^10.0.0",
     "react-native-video": "^5.2.1",
-    "react-native-video-controls": "^2.8.1",
     "react-redux": "^8.1.1",
     "redux-saga": "^1.2.3"
   },
