--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native": "0.72.1",
     "react-native-blob-util": "^0.19.2",
     "react-native-collapsible": "^1.6.1",
+    "react-native-confetti-cannon": "^1.5.2",
     "react-native-document-picker": "^9.0.1",
     "react-native-element-dropdown": "^2.10.0",
     "react-native-file-viewer": "^2.1.5",
@@ -48,6 +49,7 @@
     "react-native-splash-screen": "^3.3.0",
     "react-native-vector-icons": "^10.0.0",
     "react-native-video": "^5.2.1",
+    "react-native-video-controls": "^2.8.1",
     "react-redux": "^8.1.1",
     "redux-saga": "^1.2.3"
   },
