--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "4",
     "@notifee/react-native": "^7.8.0",
     "@react-native-clipboard/clipboard": "^1.12.1",
     "@react-native-community/netinfo": "^9.4.1",
@@ -48,6 +49,7 @@
     "react-native-share": "^9.2.3",
     "react-native-snackbar": "^2.6.2",
     "react-native-splash-screen": "^3.3.0",
+    "react-native-ux-cam": "^5.4.13",
     "react-native-vector-icons": "^10.0.0",
     "react-native-video": "^5.2.1",
     "react-native-video-controls": "^2.8.1",
