--- a/package.json
+++ b/package.json
@@ -30,11 +30,12 @@
     "react": "18.2.0",
     "react-native": "0.72.1",
     "react-native-blob-util": "^0.19.2",
+    "react-native-clarity": "^2.1.0",
     "react-native-collapsible": "^1.6.1",
     "react-native-confetti-cannon": "^1.5.2",
     "react-native-device-info": "^10.12.0",
     "react-native-document-picker": "^9.0.1",
-    "react-native-element-dropdown": "^2.10.0",
+    "react-native-element-dropdown": "^2.10.1",
     "react-native-file-viewer": "^2.1.5",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.12.0",
@@ -50,10 +51,8 @@
     "react-native-share": "^9.2.3",
     "react-native-snackbar": "^2.6.2",
     "react-native-splash-screen": "^3.3.0",
-    "react-native-ux-cam": "^5.4.13",
     "react-native-vector-icons": "^10.0.0",
     "react-native-video": "^5.2.1",
-    "react-native-video-cache": "^2.7.4",
     "react-native-video-controls": "^2.8.1",
     "react-redux": "^8.1.1",
     "redux-saga": "^1.2.3"
