--- a/package.json
+++ b/package.json
@@ -10,48 +10,57 @@
     "test": "jest"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "4",
     "@notifee/react-native": "^7.8.0",
     "@react-native-clipboard/clipboard": "^1.12.1",
     "@react-native-community/netinfo": "^9.4.1",
-    "@react-native-firebase/app": "^18.3.2",
+    "@react-native-firebase/app": "^18.5.0",
     "@react-native-firebase/auth": "^18.3.2",
     "@react-native-firebase/messaging": "^18.5.0",
     "@react-native-firebase/storage": "^18.6.1",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/drawer": "^6.6.3",
+    "@react-navigation/material-top-tabs": "^6.6.5",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "@reduxjs/toolkit": "^1.9.5",
     "@sentry/react-native": "^5.9.1",
     "google-libphonenumber": "^3.2.32",
     "moment": "^2.29.4",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.72.1",
     "react-native-blob-util": "^0.19.2",
     "react-native-collapsible": "^1.6.1",
     "react-native-confetti-cannon": "^1.5.2",
     "react-native-document-picker": "^9.0.1",
-    "react-native-element-dropdown": "^2.10.0",
+    "react-native-element-dropdown": "^2.10.1",
     "react-native-file-viewer": "^2.1.5",
     "react-native-fs": "^2.20.0",
-    "react-native-gesture-handler": "^2.12.0",
+    "react-native-gesture-handler": "^2.14.0",
     "react-native-image-picker": "^7.1.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-localization": "^2.3.2",
     "react-native-mmkv": "^2.11.0",
+    "react-native-pager-view": "^6.2.3",
     "react-native-pdf": "^6.7.1",
     "react-native-permissions": "^3.9.2",
     "react-native-razorpay": "^2.3.0",
-    "react-native-reanimated": "^3.3.0",
+    "react-native-reanimated": "^3.6.1",
     "react-native-safe-area-context": "^4.6.4",
     "react-native-screens": "^3.22.0",
     "react-native-share": "^9.2.3",
     "react-native-snackbar": "^2.6.2",
     "react-native-splash-screen": "^3.3.0",
+    "react-native-swiper-flatlist": "^3.2.3",
+    "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.0",
     "react-native-video": "^5.2.1",
     "react-native-video-controls": "^2.8.1",
     "react-redux": "^8.1.1",
-    "redux-saga": "^1.2.3"
+    "redux-saga": "^1.2.3",
+    "tailwindcss": "3.3.2",
+    "twrnc": "^3.6.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
