--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@gorhom/bottom-sheet": "4",
     "@notifee/react-native": "^7.8.0",
     "@react-native-clipboard/clipboard": "^1.12.1",
+    "@react-native-community/checkbox": "^0.5.17",
+    "@react-native-community/datetimepicker": "^7.6.2",
     "@react-native-community/netinfo": "^9.4.1",
     "@react-native-firebase/app": "^18.5.0",
     "@react-native-firebase/auth": "^18.3.2",
@@ -42,6 +44,7 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-localization": "^2.3.2",
     "react-native-mmkv": "^2.11.0",
+    "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-pager-view": "^6.2.3",
     "react-native-pdf": "^6.7.1",
     "react-native-permissions": "^3.9.2",
@@ -54,6 +57,7 @@
     "react-native-splash-screen": "^3.3.0",
     "react-native-swiper-flatlist": "^3.2.3",
     "react-native-tab-view": "^3.5.2",
+    "react-native-toast-notifications": "^3.4.0",
     "react-native-vector-icons": "^10.0.0",
     "react-native-video": "^5.2.1",
     "react-native-video-controls": "^2.8.1",
