--- a/package.json
+++ b/package.json
@@ -51,10 +51,11 @@
     "react-native-localization": "^2.3.2",
     "react-native-mmkv": "^2.11.0",
     "react-native-modal-datetime-picker": "^17.1.0",
-    "react-native-pager-view": "^6.2.3",
     "react-native-orientation-locker": "^1.6.0",
+    "react-native-pager-view": "^6.2.3",
     "react-native-pdf": "^6.7.1",
     "react-native-permissions": "^3.9.2",
+    "react-native-ratings": "^8.1.0",
     "react-native-razorpay": "^2.3.0",
     "react-native-reanimated": "^3.6.1",
     "react-native-reanimated-carousel": "^3.5.1",
@@ -64,11 +65,11 @@
     "react-native-share": "^9.2.3",
     "react-native-snackbar": "^2.6.2",
     "react-native-splash-screen": "^3.3.0",
+    "react-native-svg": "^14.1.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-swiper-flatlist": "^3.2.3",
     "react-native-tab-view": "^3.5.2",
     "react-native-toast-notifications": "^3.4.0",
-    "react-native-svg": "^14.1.0",
-    "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.0.0",
     "react-native-video": "^5.2.1",
     "react-native-video-controls": "^2.8.1",
