--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,3 +1,4 @@
+$RNFirebaseAsStaticFramework = true
 # Resolve react_native_pods.rb with node to allow for hoisting
 require Pod::Executable.execute_command('node', ['-p',
   'require.resolve(
@@ -30,7 +31,8 @@ target 'YoungLabs' do
 
   # Flags change depending on the env values.
   flags = get_default_flags()
-
+  # use_frameworks!
+  use_frameworks! :linkage => :static
   use_react_native!(
     :path => config[:reactNativePath],
     # Hermes is now enabled by default. Disable by setting this flag to false.
@@ -40,7 +42,7 @@ target 'YoungLabs' do
     #
     # Note that if you have use_frameworks! enabled, Flipper will not work and
     # you should disable the next line.
-    :flipper_configuration => flipper_config,
+    # :flipper_configuration => flipper_config,
     # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
