--- a/ios/YoungLabs/Info.plist
+++ b/ios/YoungLabs/Info.plist
@@ -2,6 +2,26 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>MaterialCommunityIcons.ttf</string>
+		<string>Ionicons.ttf</string>
+		<string>Roboto Condensed.ttf</string>
+		<string>Big Shoulders Display SemiBold.ttf</string>
+		<string>Gelasio-SemiBold.ttf</string>
+		<string>Roboto.ttf</string>
+		<string>Dancing Script.ttf</string>
+		<string>Signika Negative Medium.ttf</string>
+		<string>Signika Negative SemiBold.ttf</string>
+	</array>
+	<key>NSCameraUsageDescription</key>
+	<string></string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string></string>
+	<key>NSHumanReadableCopyright</key>
+	<string></string>
+	<key>CFBundleGetInfoString</key>
+	<string></string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
@@ -52,16 +72,6 @@
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
-	<key>UIAppFonts</key>
-	<array>
-		<string>Roboto Condensed.ttf</string>
-		<string>Big Shoulders Display SemiBold.ttf</string>
-		<string>Gelasio-SemiBold.ttf</string>
-		<string>Roboto.ttf</string>
-		<string>Dancing Script.ttf</string>
-		<string>Signika Negative Medium.ttf</string>
-		<string>Signika Negative SemiBold.ttf</string>
-	</array>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>fetch</string>
